Quorum3/Library/Tests/TypeCheckerGenerated/Fail/RetAssignBooleanUndefined.quorum
class Main
    action Main
        boolean v = Test()
    end

    action Test() returns boolean
        return undefined
    end
end